# ultravox-cli

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  app.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py
tests/: test_cli.py  test_cli_arguments.py  test_error_handling.py  test_integration.py
tests/ultravox_client/: conftest.py  test_calls.py  test_client.py  test_helpers.py  test_tool_registry.py  test_tools.py  test_voices.py  test_websocket_session.py
tests/ultravox_client/api/: test_calls.py  test_tools.py
ultravox_cli/: cli.py
ultravox_cli/ultravox_client/: README.md  client.py  helpers.py  tool_registry.py  websocket_session.py
ultravox_cli/ultravox_client/api/: calls.py  tools.py  voices.py
ultravox_cli/ultravox_client/examples/: basic_usage.py  tool_example.py
ultravox_cli/ultravox_client/session/: websocket_session.py
ultravox_cli/ultravox_client/tools/: tool_registry.py
ultravox_cli/ultravox_client/utils/: helpers.py
